--- a/src/style/style.css
+++ b/src/style/style.css
@@ -28,15 +28,9 @@ html {
   }
 }
 
-@media screen and (max-width: 53em) {
+@media screen and (max-width: 55em) {
   html {
     font-size: 10px;
-  }
-}
-
-@media screen and (max-width: 50em) {
-  html {
-    font-size: 8px;
   }
 }
 
@@ -65,10 +59,10 @@ header {
   padding: 1.5rem 0;
   display: -ms-grid;
   display: grid;
-  background-color: yellowgreen;
+  background-color: transparent;
   -ms-grid-columns: inherit;
       grid-template-columns: inherit;
-  z-index: 5;
+  z-index: 15;
   position: fixed;
   left: 0;
   right: 0;
@@ -88,7 +82,7 @@ header nav {
   -ms-grid-column: 7;
   -ms-grid-column-span: 5;
   grid-column: 7/12;
-  justify-self: flex-start;
+  justify-self: flex-end;
 }
 
 header nav ul {
@@ -139,6 +133,7 @@ header .mobile-nav-btn {
   header .mobile-nav-btn::before {
     content: "";
     position: absolute;
+    background-color: #ee4d47;
     border-radius: 50%;
     width: 3.5rem;
     height: 3.5rem;
@@ -146,6 +141,21 @@ header .mobile-nav-btn {
     left: 0;
     -webkit-transform: translate(-25%, -50%);
             transform: translate(-25%, -50%);
+  }
+  header .background {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ee4d47;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+    opacity: 0;
+    -webkit-transition: opacity 0.1s ease;
+    transition: opacity 0.1s ease;
   }
   header nav {
     display: none;
@@ -156,12 +166,13 @@ header .mobile-nav-btn {
     right: 0;
     -ms-grid-column-align: center;
         justify-self: center;
-    background-color: yellowgreen;
+    background-color: transparent;
     opacity: 0;
     visibility: hidden;
     height: 100vh;
     -webkit-transition: all ease 0.5s;
     transition: all ease 0.5s;
+    z-index: 12;
   }
   header nav ul {
     -webkit-box-orient: vertical;
@@ -227,6 +238,20 @@ header .mobile-nav-btn {
     opacity: 1;
     visibility: visible;
   }
+  header #mobile-nav:checked ~ .background {
+    opacity: 1;
+    visibility: visible;
+    -webkit-transition: opacity 0.5s ease;
+    transition: opacity 0.5s ease;
+  }
+}
+
+.addBg {
+  background-color: #ee4d47;
+}
+
+.removeBg {
+  background-color: transparent;
 }
 
 .hero {
@@ -234,7 +259,7 @@ header .mobile-nav-btn {
   -ms-grid-row: 1;
   -ms-grid-row-span: 4;
   grid-row: 1/5;
-  background-image: url(/src/asset/back.svg);
+  background-image: url(/src/asset/heroBg.svg);
   background-size: contain;
   background-repeat: no-repeat;
   z-index: 0;
@@ -242,12 +267,9 @@ header .mobile-nav-btn {
   display: grid;
   -ms-grid-columns: inherit;
       grid-template-columns: inherit;
-  -ms-grid-rows: 8rem max-content 3.75rem max-content 11.25rem 24.625rem;
-      grid-template-rows: 8rem -webkit-max-content 3.75rem -webkit-max-content 11.25rem 24.625rem;
-      grid-template-rows: 8rem max-content 3.75rem max-content 11.25rem 24.625rem;
-  -ms-grid-rows: 11.875rem max-content 3.75rem max-content 11.25rem 24.625rem;
-      grid-template-rows: 11.875rem -webkit-max-content 3.75rem -webkit-max-content 11.25rem 24.625rem;
-      grid-template-rows: 11.875rem max-content 3.75rem max-content 11.25rem 24.625rem;
+  -ms-grid-rows: 11.875rem max-content 3.75rem max-content 11.25rem 20rem;
+      grid-template-rows: 11.875rem -webkit-max-content 3.75rem -webkit-max-content 11.25rem 20rem;
+      grid-template-rows: 11.875rem max-content 3.75rem max-content 11.25rem 20rem;
   color: #ffffff;
 }
 
@@ -256,14 +278,6 @@ header .mobile-nav-btn {
     background-image: url(/src/asset/mobileBg.svg);
     background-size: cover;
     background-position: right;
-  }
-}
-
-@media screen and (max-width: 53em) {
-  .hero {
-    -ms-grid-rows: 11.875rem 32rem 3.75rem max-content 11.25rem;
-        grid-template-rows: 11.875rem 32rem 3.75rem -webkit-max-content 11.25rem;
-        grid-template-rows: 11.875rem 32rem 3.75rem max-content 11.25rem;
   }
 }
 
@@ -283,34 +297,20 @@ header .mobile-nav-btn {
   z-index: 1;
 }
 
+@media screen and (max-width: 49.875em) {
+  .hero h1 {
+    font-size: 5.25rem;
+    line-height: 5.25rem;
+  }
+}
+
 @media screen and (max-width: 42.5em) {
   .hero h1 {
     -ms-grid-column: 2;
     -ms-grid-column-span: 10;
     grid-column: 2/12;
-    font-size: 10.25rem;
-    line-height: 10.25rem;
-  }
-}
-
-@media screen and (max-width: 36.625em) {
-  .hero h1 {
     font-size: 8.25rem;
-    line-height: 8.25rem;
-  }
-}
-
-@media screen and (max-width: 29.5em) {
-  .hero h1 {
-    font-size: 7.25rem;
-    line-height: 7.25rem;
-  }
-}
-
-@media screen and (max-width: 26.125em) {
-  .hero h1 {
-    font-size: 6.25rem;
-    line-height: 6.25rem;
+    line-height: 10.25rem;
   }
 }
 
@@ -319,8 +319,8 @@ header .mobile-nav-btn {
   -ms-grid-row-span: 1;
   grid-row: 4/5;
   -ms-grid-column: 2;
-  -ms-grid-column-span: 5;
-  grid-column: 2/7;
+  -ms-grid-column-span: 6;
+  grid-column: 2/8;
   padding: 1.25rem 1.5rem;
   background-color: #ee4d47;
   border-radius: 4px;
@@ -336,24 +336,6 @@ header .mobile-nav-btn {
 @media screen and (max-width: 42.5em) {
   .hero .btn {
     font-size: 2rem;
-  }
-}
-
-.hero .truck {
-  -ms-grid-row: 6;
-  -ms-grid-row-span: 1;
-  grid-row: 6/7;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 5;
-  grid-column: 1/6;
-  background-image: url(/src/asset/mobel.svg);
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
-@media screen and (max-width: 53em) {
-  .hero .truck {
-    display: none;
   }
 }
 
@@ -611,11 +593,16 @@ header .mobile-nav-btn {
   display: grid;
   -ms-grid-columns: (1fr)[9];
       grid-template-columns: repeat(9, 1fr);
+  -ms-grid-rows: (8rem)[12];
+      grid-template-rows: repeat(12, 8rem);
   grid-row-gap: 0.625rem;
   grid-column-gap: 1.25rem;
 }
 
 .faq .questions > li {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   background-color: #ffffff;
   padding: 1.5625rem 7.17125rem;
   padding-left: 2.1875rem;
